# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Dockerfile.to-fix  README.md  configuration.yaml  postgres.md  postgres_docker.md  redis.md  send_email.md  spec.yaml  sqlx-data.json
.github/workflows/: PushImageToDockerHubFromMain.yaml  general.yml
.sqlx/: query-3448c5c8785a9c6d408245c7fbc8414eb6aa7bc60b898824a60e10706ed701f1.json  query-b1dca2be2dd7cb0c51a379dc7e81a9fb8a723a3f02e98157bf3dd07e2da16441.json  query-b4f0d5895923734f01bf3d88023dba22218e862983ce3f1823859b3c2eeb4b8d.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230521172219_create_subscriptions_table.sql  20231119154730_make_status_not_null_in_subscriptions.sql  20231119160131_create_subscription_tokens_table.sql  20231123231746_create_users_table.sql  20231124000624_rename_password_column.sql  20231124225555_add_salt_to_users.sql  20231124232251_remove_salt_from_users.sql  20231129203310_create_newsletter_issues_table.sql  20231129203425_create_issue_delivery_queue_table.sql
scripts/: migrate_do_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  user.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs  system.rs
src/routes/admin/: mod.rs
src/routes/admin/newsletter/: post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
templates/: reset_password.hbs  verification_code.hbs
templates/layouts/: base.hbs
templates/partials/: styles.hbs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
