[package]
name = "zero2prod"
version = "0.1.0"
authors = ["William MR <william@godeveloper.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = "1.0.193"
serde-aux = "4.2.0"
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"
secrecy = { version = "0.8.0", features = ["serde"] }
h2 = "0.4.0"
webpki = "0.22.4"
hermit-abi = "0.3.3"
unicode-segmentation = "1.10.1"
claims = "0.7.1"
validator = "0.16.1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
handlebars = "4.5.0"
dotenv = "0.15.0"
serde_json = "1.0.108"
lettre = { version = "0.11.2", features = ["tokio1", "tokio1-native-tls"] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
base64 = "0.21.5"

[dev-dependencies]
once_cell = "1.18.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
wiremock = "0.5.21"
serde_json = "1.0.108"
linkify = "0.10.0"
