[package]
name = "zero2prod"
version = "0.1.1"
authors = ["William MR <william@rustdeveloper.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1" # "4.4.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.197"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
thiserror = "1.0.57"
serde-aux = "4.4.0"
unicode-segmentation = "1.11.0"
rand = { version = "0.8.5", features = ["std_rng"] }
anyhow = "1.0.80"
base64 = "0.21.7"
argon2 = { version = "0.4.1", features = ["std"] }
validator = "0.16.1"
tracing-actix-web = "0.7.9"
secrecy = { version = "0.8.0", features = ["serde"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
serde_json = "1.0.114"
actix-web-lab = "0.20.2"
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
h2 = "0.4.2"
webpki = "0.22.4"
hermit-abi = "0.3.6"
claims = "0.7.1"
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = {  version = "0.12.1", features = ["std"] }
sha2 = "0.10.6"
hex = "0.4.3"

# Send Email
handlebars = "5.1.0"
dotenv = "0.15.0"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"] }

[dev-dependencies]
once_cell = "1.19.0"
fake = "~2.3.0"
quickcheck = "0.9.2" # Cannot be >1.0.0
quickcheck_macros = "1.0.0"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
serde_json = "1.0.114"
linkify = "0.10.0"
serde_urlencoded = "0.7.1"
claims = "0.7.0"